[project]
name = "handsome"
version = "0.1.0"
description = "A simple MCP handsome server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
handsome = "handsome:main"